src/module5/examples/src/01_basic-types.ts
let myName: string = "hello"
myName = 123;  // error

let myNum: number = 123
myNum = "hello";  // error

let myBool: boolean = false
myBool = 123; // error

let myAny: any = 'string'
myAny = 23

export {};